objects/Tech_Review_Summary__c.object
<CustomObject>
    <description>This is an application to be used for reconciliation of Option technical details post Design Win</description>
    <fields>
        <fullName>Approval_to_proceed_to_RTM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval to proceed to RTM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Number__c</fullName>
        <label>Charge Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Design_Specification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Design Specification</label>
        <referenceTo>Custom_Design__c</referenceTo>
        <relationshipLabel>Tech Reviews</relationshipLabel>
        <relationshipName>Tech_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Decision</label>
        <referenceTo>Decision__c</referenceTo>
        <relationshipLabel>Tech Reviews</relationshipLabel>
        <relationshipName>Tech_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deliverable_Part_Number_DPN__c</fullName>
        <description>Deliverable Part Number(DPN) of Option</description>
        <formula>Option__r.Deliverable_Part_Number_DPN__c</formula>
        <inlineHelpText>Deliverable Part Number of Option</inlineHelpText>
        <label>Deliverable Part Number(DPN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliverable_Part_Number__c</fullName>
        <label>Deliverable Part Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deliverable_Type__c</fullName>
        <description>Deliverable Type for Option</description>
        <formula>Option__r.Deliverable_Type_Formula__c</formula>
        <inlineHelpText>Option Deliverable Type</inlineHelpText>
        <label>Deliverable Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipName>Tech_Review_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forecast_Tapeout_Date__c</fullName>
        <formula>Option__r.Forecast_Tapeout_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Tapeout Date(Option)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <inlineHelpText>^ Please complete this field in order to promote Option to Design Execution (RF)</inlineHelpText>
        <label>^Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Result__c</fullName>
        <inlineHelpText>^ Please complete this field in order to promote Option to Design Execution (RF)</inlineHelpText>
        <label>^Meeting Result</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Tech_Review_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Option_RTM_Ready__c</fullName>
        <label>Option RTM Ready</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Option</label>
        <referenceTo>Customer_Requirement__c</referenceTo>
        <relationshipLabel>Tech Reviews</relationshipLabel>
        <relationshipName>Tech_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Optional_Services__c</fullName>
        <label>Optional Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IP</fullName>
                </value>
                <value>
                    <fullName>Wafer Test</fullName>
                </value>
                <value>
                    <fullName>Module Test</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prototype_outlook__c</fullName>
        <label>Prototype Ship Date - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RITOutlook__c</fullName>
        <label>!#RIT Outlook</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIT_outlook__c</fullName>
        <label>!#RIT A/B Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RTMOutlook__c</fullName>
        <label>!#RTM Outlook</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RTM_outlook__c</fullName>
        <label>!#GDS-2 Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Information</label>
        <referenceTo>Request_Information__c</referenceTo>
        <relationshipLabel>Tech Reviews</relationshipLabel>
        <relationshipName>Tech_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tech_Review_Outcome_Status__c</fullName>
        <inlineHelpText>^ Please complete this field in order to promote Option to Design Execution (RF)</inlineHelpText>
        <label>^Tech Review Outcome/Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defects</fullName>
                </value>
                <value>
                    <fullName>ECO</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tech Review</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Customer_Design_Specification__c</columns>
        <columns>Option__c</columns>
        <columns>Opportunity__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Step_Down_Tech_Review</fullName>
        <columns>Option__c</columns>
        <columns>NAME</columns>
        <columns>Deliverable_Part_Number_DPN__c</columns>
        <columns>Deliverable_Type__c</columns>
        <columns>Meeting_Date__c</columns>
        <columns>Meeting_Result__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Approval_to_proceed_to_RTM__c</columns>
        <columns>RTM_outlook__c</columns>
        <columns>RIT_outlook__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Device__c</columns>
        <columns>Tech_Review_Outcome_Status__c</columns>
        <columns>Decision__c</columns>
        <filterScope>Everything</filterScope>
        <label>Step Down Tech Review</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TR-{YYYY}-{MM}-{0000}</displayFormat>
        <label>Tech Review #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tech Reviews</pluralLabel>
    <recordTypes>
        <fullName>ASIC_Tech_Review_1</fullName>
        <active>true</active>
        <label>ASIC Tech Review 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASIC_Tech_Review_2</fullName>
        <active>true</active>
        <label>ASIC Tech Review 2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Foundry</fullName>
        <active>true</active>
        <label>Foundry</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RTM_details_should_be_filled_on_Update</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK(Id) , OR( Approval_to_proceed_to_RTM__c, NOT( ISBLANK( RIT_outlook__c  ) ), NOT( ISBLANK( RTM_outlook__c  ) )) )</errorConditionFormula>
        <errorMessage>RTM details should be filled on Update</errorMessage>
    </validationRules>
</CustomObject>